Spring-practice02 简单用户界面 spring-mvc

--- a/pro-child05-module/web/WEB-INF/templates/target.html
+++ b/pro-child05-module/web/WEB-INF/templates/target.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 	<h1>目标页面</h1>
-	<a th:href="@{/}">返回首页</a>
+	<a th:href="@{/}">返回首页</a><br>
+	<div>
+		<a th:href="@{/user/sign}">用户注册</a>
+		<a th:href="@{/user/login}">用户登陆</a>
+		<a th:href="@{/user/quit}">用户退出</a>
+	</div>
 </body>
 </html>
