Spring-practice02 简单用户界面 spring-mvc

--- a/pro-child05-module/web/WEB-INF/templates/login.html
+++ b/pro-child05-module/web/WEB-INF/templates/login.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<h1>登陆</h1>
-	<a th:href="@{/}">返回首页</a><br>
+	<a th:href="@{/demo01/}">返回首页</a><br>
 	<div>
-		<form action="/user/home" method="post">
+		<form action="/demo01//user/home" method="post">
 			用户名：<input type="text" name="userName" value="">
 			邮箱：<input type="text" name="email" value="">
 			密码：<input type="password" name="userPwd" value="">
