--- a/pro-child05-module/web/WEB-INF/templates/target.html
+++ b/pro-child05-module/web/WEB-INF/templates/target.html
@@ -6,11 +6,12 @@
 </head>
 <body>
 	<h1>目标页面</h1>
-	<a th:href="@{/}">返回首页</a><br>
+	<h2 th:text="${session.testValue}"></h2>
+	<a th:href="@{/demo01/}">返回首页</a><br>
 	<div>
-		<a th:href="@{/user/sign}">用户注册</a>
-		<a th:href="@{/user/login}">用户登陆</a>
-		<a th:href="@{/user/quit}">用户退出</a>
+		<a th:href="@{/demo01/user/sign}">用户注册</a>
+		<a th:href="@{/demo01/user/login}">用户登陆</a>
+		<a th:href="@{/demo01/user/quit}">用户退出</a>
 	</div>
 </body>
 </html>
