--- a/pro-child05-module/web/WEB-INF/templates/sign.html
+++ b/pro-child05-module/web/WEB-INF/templates/sign.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<h1>注册</h1>
-	<a th:href="@{/}">返回首页</a><br>
+	<a th:href="@{/demo01/}">返回首页</a><br>
 	<div>
-		<form action="/user/sign/success" method="post">
+		<form action="/demo01//user/sign/success" method="post">
 			用户名：<input type="text" name="userName" value="">
 			邮箱：<input type="text" name="email" value="">
 			密码：<input type="password" name="userPwd" value="">
