--- a/pro-child05-module/web/WEB-INF/templates/userHome.html
+++ b/pro-child05-module/web/WEB-INF/templates/userHome.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>用户主页</h1>
-	<a th:href="@{/}">用户首页</a>
+	<a th:href="@{/demo01/}">用户首页</a>
+	<a th:href="@{}">退出登陆</a>
 </body>
 </html>
