--- a/pro-child05-module/web/WEB-INF/templates/userHome.html
+++ b/pro-child05-module/web/WEB-INF/templates/userHome.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<title>用户主页</title>
 </head>
 <body>
-    <h1>用户主页</h1>
+    <h1>
+	    <span>用户主页 </span>
+	    <span>hello </span>
+	    <span th:text="${session.userName}"></span>
+    </h1>
 	<a th:href="@{/demo01/}">用户首页</a>
-	<a th:href="@{}">退出登陆</a>
+	<a th:href="@{/demo01/}">退出登陆</a>
+
 </body>
 </html>
