--- a/pro-child05-module/web/WEB-INF/templates/userHome.html
+++ b/pro-child05-module/web/WEB-INF/templates/userHome.html
@@ -8,7 +8,7 @@
     <h1>
 	    <span>用户主页 </span>
 	    <span>hello </span>
-	    <span th:text="${session.userName}"></span>
+	    <span th:text="${userLocal.userName}"></span>
     </h1>
 	<a th:href="@{/demo01/}">用户首页</a>
 	<a th:href="@{/demo01/}">退出登陆</a>
