spring-mvc practice01 REST-ful03 获取路径值

--- a/pro-child05-module/web/WEB-INF/templates/REST/REST-target.html
+++ b/pro-child05-module/web/WEB-INF/templates/REST/REST-target.html
@@ -5,6 +5,8 @@
 	<title>REST-target</title>
 </head>
 <body>
-  <h1 th:text="${method}"></h1>
+	<h1 th:text="${method}"></h1>
+	<h2 th:text="${empId}"></h2>
+	<h3 th:text="${empName}"></h3>
 </body>
 </html>
