--- a/pro-child05-module/web/WEB-INF/templates/movie-rest/movie-rest-add.html
+++ b/pro-child05-module/web/WEB-INF/templates/movie-rest/movie-rest-add.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>addMovie</title>
-  <style type="text/css">
+  <style>
     div{
       margin-top: 10%;
       margin-left: 30%;
